website/css/style.css
/* CSS is how you can add style to your website, such as colors, fonts, and positioning of your
   HTML content. To learn how to do something, just try searching Google for questions like
   "how to change link color." */
   
:root {
  --common-spacing: 0.45em;
}


body {
  /* background-color: #1a143a; */
  background-image: url(https://tipsheda.com/resources/background-image-1.jpg);
  color: white;
  font-family: 'Acme';
  font-size: 1.5em;
  margin: 0;
  cursor: url(https://tipsheda.com/resources/cursor/cursor_4_1.png), auto;
  animation-duration: 0.8s;
  animation-name: cursor-animate;
  animation-iteration-count: infinite;
  animation-timing-function: steps(3);
}


#main {
  /* display: flex; */
}

a {
  color: #0f0f0f;
  text-decoration:none;
  text-shadow:
     0.050em  0.050em 0px white,
    -0.050em -0.050em 0px white,
     0.050em -0.050em 0px white,
    -0.050em  0.050em 0px white,
     0.000px -0.050em 0px white,
    -0.050em  0.000px 0px white,
     0.075em  0.075em 0px white,
     0.100em  0.100em 0px white,
     0.125em  0.125em 0px white
}
a:hover {
	cursor: url(https://tipsheda.com/resources/cursor/grabby_3_1.png), auto;
	animation-duration: 1s;
	animation-name: grabby-animate;
	animation-iteration-count: infinite;
	animation-timing-function: steps(5);
}
a:hover:not(:has(img)) {
  color: white;
  text-shadow: none;
  position: relative;
  top: 0.125em;
  left: 0.125em;
  /* font-family: Georgia, serif; */
  /* font-size: 0.91em; */
}
a img:hover {
	filter: saturate(0%) brightness(160%) contrast(120%);
}


.bandcamp-grid {
  display: grid;
  grid-gap: var(--common-spacing);
  grid-template-columns: repeat(auto-fit, minmax(11em, 1fr));
  grid-auto-rows: 1fr;
  overflow: hidden;
  padding-left: var(--common-spacing);
  padding-right: var(--common-spacing);
  max-height: 11.3em;
  text-align: center;
}
.bandcamp-grid-item {
  /* padding-bottom: 1em; */
}
.bandcamp-grid-item iframe {
  border: 0;
  border-radius: 4%;
  height: 10.8em;
  width: 10.8em;
}
.soundcloud-container {
	padding-left: 0.5em;
	padding-right: 0.5em;
	margin-left: auto;
	margin-right: auto;
	max-width: 25em;
}
.soundcloud-container:last-of-type {
	margin-bottom: 0.5em;
}
.audio-container {
	display: flex;
	flex-wrap: wrap;
	grid-gap: 0.68em;
	justify-content: center;
	overflow: hidden;
	max-width: 35em;
	margin-left: 0.5em;
	margin-right: 0.5em;
	max-height:200px;
	margin-bottom: 0.75em;
}
.audio-item {
	position: relative;
	width: 225px;
	height: 225px;
	min-width: 225px;
}
.audio-item img {
	position: relative;
	width: 100%;
	height: 100%;
	border-radius: 12% 12% 0% 0%;
}
.audio-item audio {
	position: absolute;
	top: 160px;
	left: 0px;
	width: 225px
}


.banner {
  overflow-x: hidden;
  display: flex;
  justify-content: center;
}
.banner img {
  max-width: 60em;
  min-width: 36em;
}


.center-text {
  font-size: min(4.7vw, 0.9em);
  max-width: 29em;
  margin-left: auto;
  margin-right: auto;
  padding-left: 1.5em;
  padding-right: 1.5em;
  text-align: justify;
  text-align-last: center;
}


.hide-element {
  display:none;
}


.ography-link {
  margin: 0;
  margin-bottom: 1.75em;
  text-align: center;
  text-wrap: balance;
}


.half-width-scaling-image {
  display: block;
  margin: auto;
  max-width: min(14em, 50%);
  width: calc(100% - 1em);
}


.link-descriptor {
  font-size: 0.6em;
}


.main-content {
  margin: auto;
  padding: 0.5em;
  padding-top: 0;
  max-width: 35em;
}


.resizing-box {
  display: flex;
  flex-wrap: wrap;
  grid-gap: 0.68em;
  justify-content: center;
  margin-bottom: 0.25em;
  max-height: 13.2em;
  overflow: hidden;
  padding-top: 0.55em;
  padding-bottom: 0.55em;
}
.resizing-box-item {
  height: 6.25em;
  width: 6.25em;
}
.resizing-box-item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 12%;
}
.resizing-box-item img:hover {
  animation-name: zoomHover;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-timing-function: steps(3);
}


/* Make game covers rotate on hover */
@media (hover: hover), (-ms-high-contrast:none) {
	.rotate-on-hover:hover{
		animation-name: zoomHover;
		animation-duration: 1.5s;
		animation-iteration-count: infinite;
		animation-timing-function: steps(3);
	}
}


.socials-box {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 1em;
}
.socials-box-item {
  font-size: 1.4em;
  max-width: 6.1em;
  padding: 0.23em;
  width: 1.2em;
}
.socials-box-item img {
  animation-duration: 1s;
  animation-name: jiggle;
  animation-iteration-count: infinite;
  animation-timing-function: steps(2);
  display: block;
  max-width: 1.1em;
  position: relative;
}
@media (hover: hover), (-ms-high-contrast:none) {
	.socials-box-item img:hover {
		animation-name: jiggleHover;
		bottom: 0.1em;
		right: 0.1em;
	}
}


/* ------------------ Animations ------------------ */


/* Animate cursor */
@keyframes cursor-animate {
  from {
    cursor: url(https://tipsheda.com/resources/cursor/cursor_4_1.png), auto;
  }
  
  33% {
    cursor: url(https://tipsheda.com/resources/cursor/cursor_4_2.png), auto;
  }
  
  66% {
    cursor: url(https://tipsheda.com/resources/cursor/cursor_4_3.png), auto;
  }
  
  to {
    cursor: url(https://tipsheda.com/resources/cursor/cursor_4_1.png), auto;
  }
}

/* Animate grabby */
@keyframes grabby-animate {
  from {
    cursor: url(https://tipsheda.com/resources/cursor/grabby_3_1.png), auto;
  }
  
  15% {
    cursor: url(https://tipsheda.com/resources/cursor/grabby_3_2.png), auto;
  }
  
  30% {
    cursor: url(https://tipsheda.com/resources/cursor/grabby_3_3.png), auto;
  }
  
  45% {
    cursor: url(https://tipsheda.com/resources/cursor/grabby_3_2.png), auto;
  }
  
  60% {
    cursor: url(https://tipsheda.com/resources/cursor/grabby_3_1.png), auto;
  }
  
  to {
    cursor: url(https://tipsheda.com/resources/cursor/grabby_3_1.png), auto;
  }
}

/* Make icons jiggle */
@keyframes jiggle {
  from {
    transform: rotate(-5deg);
  }

  50% {
    transform: rotate(5deg);
  }

  to {
    transform: rotate(-5deg);
  }
}

/* Make icon jiggle and zoom on hover */
@keyframes jiggleHover {
  from {
    transform: rotate(-5deg) scale(1.4);
  }

  50% {
    transform: rotate(5deg) scale(1.4);
  }

  to {
    transform: rotate(-5deg) scale(1.4);
  }
}

/* Animate pointer */
/* 
@keyframes pointer-animate {
  from {
    cursor: url(https://tipsheda.com/resources/cursor/pointer_3_1.png), auto;
  }
  
  33% {
    cursor: url(https://tipsheda.com/resources/cursor/pointer_3_2.png), auto;
  }
  
  66% {
    cursor: url(https://tipsheda.com/resources/cursor/pointer_3_3.png), auto;
  }
  
  to {
    cursor: url(https://tipsheda.com/resources/cursor/pointer_3_1.png), auto;
  }
}
*/

/* Make game covers jiggle on hover */
@keyframes zoomHover {
  from {
    transform: translate(0,-2px) rotate(-1deg) scale(1.1);
  }

  50% {
    transform: translate(0,1px) rotate(1deg) scale(1.1);
  }

  to {
    transform: translate(0,-2px) rotate(-3deg) scale(1.1);
  }
}

